# math-for-programmers

./: main.py  pyproject.toml
appendix-c/: octahedron-rotation.py  octahedron.py  vectors.py
ch02/: walkthrough.ipynb
ch03/: colors.py  draw2d.py  draw3d.py  vectors.py  walkthrough.ipynb
ch04/: camera.py  draw_model.py  draw_teapot.py  scale_teapot.py  scale_translate_teapot.py  teapot.py  transforms.py  walkthrough.ipynb
