[project]
name = "math-for-programmers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pygame-ce>=2.5.7",
    "pyopengl>=3.1.10",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
